c2prj1_cards/grade.txt
Grading at Wed Sep 11 16:35:37 UTC 2019
Compiling cards.c
cards.c: In function ‘card_from_letters’:
cards.c:83:43: error: incompatible types when returning type ‘int’ but ‘card_t {aka struct card_tag}’ was expected
     printf("Invalid value input!"); return(EXIT_FAILURE);
                                           ^
cards.c:94:49: error: incompatible types when returning type ‘int’ but ‘card_t {aka struct card_tag}’ was expected
   default: printf("Invalid suit input!"); return(EXIT_FAILURE);
                                                 ^
Could not compile your card.c!

Overall Grade: FAILED
